# GOAST

./: .gitignore  CMakeLists.txt  README.md
cmake/: GOAST.cmake  GOASTConfig.cmake.in
cmake/Modules/: FindADOLC.cmake  FindEigen3.cmake  FindIpopt.cmake  FindMOSEK.cmake  FindOpenMesh.cmake  FindSuiteSparse.cmake  Findtrlib.cmake
data/: README.md  noisyStanfordBunny.ply  octa_src_small.ply  octa_trg_small.ply
data/cactus/: .directory  cactus0.ply  cactus1.ply  cactus10.ply  cactus12.ply  cactus13.ply  cactus14.ply  cactus15.ply  cactus16.ply  cactus17.ply  cactus18.ply  cactus2.ply  cactus4.ply  cactus5.ply  cactus6.ply  cactus7.ply  cactus8.ply  cactus9.ply  cactusBottomMask.txt
data/faces/: .directory  disgust.ply  neutral.ply  smile.ply  surprise.ply
data/finger/: .directory  finger1.ply  fingerMask.txt  finger_var.ply
data/hyperbolic/: monkey_saddle_1.ply  (+1 more)
doc/: Definitions.tex  Doxyfile
examples/: CMakeLists.txt  DirichletEnergy.cpp  NRICConstrictions.cpp  NRICFolding.cpp  NRICGeodesics.cpp  NRICIsometricMode.cpp  NRICMean.cpp  Phasefield.cpp  decimation.cpp  deformationTransfer.cpp  dissipationModes.cpp  elasticMean.cpp  geodesic_extrapolation_shells.cpp  geodesic_interpolation_shells.cpp  multires_example.cpp  nonlinearProjection.cpp  nonlinearSpline.cpp  parallelTransport.cpp  parametricMCM.cpp  registration.cpp  sectionalCurvature.cpp
tests/: CMakeLists.txt  MOSEKTest.cpp  NRICIntegrabilityTest.cpp  NRICReconstructionTest.cpp  RosenbrockTest.cpp  adolcTest.cpp  bosqpTest.cpp  firstTest.cpp  ipoptTest.cpp  trncgTest.cpp
tools/: CMakeLists.txt
(+126 files in other folders)
